<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6EDED"
    tools:context=".registration_signin.RegisterActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cook"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:text="@string/create_your_naccount"
        android:textColor="#1565C0"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="540sp"
        android:orientation="vertical"
        android:padding="32dp"
        android:background="#E6EDED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView1"
       >

        <TextView
            android:id="@+id/namesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/names"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editTextPersonNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_full_names"
            android:inputType="text"
            android:textSize="18sp"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:textColor="#707070"
            android:background="@drawable/edit_text_background"
            tools:ignore="Autofill" />


        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editTextPersonEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:textColor="#707070"
            android:background="@drawable/edit_text_background"/>

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editTextPersonPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:textColor="#707070"
            android:background="@drawable/edit_text_background"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editTextPersonConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:textColor="#707070"
            android:background="@drawable/edit_text_background"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_agree_to_the_terms_and_privacy" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/register"
            android:layout_marginTop="1dp"
            android:background="@drawable/btn_background"
            style="@android:style/Widget.Button"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/blue1"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>