<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6EDED"
    tools:context=".registration_signin.MainActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cook"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_login"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="#283593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:background="#E6EDED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView1"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/emailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@drawable/edit_text_background"/>

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@drawable/edit_text_background"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/forgot_password"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#707070" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/login_with" />

            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#707070" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:id="@+id/facebook"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/social_btn_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/facebookImageView"
                    android:layout_width="50dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/facebook_png"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/facebookTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/facebook"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="InefficientWeight,NestedWeights" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/google"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/social_btn_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/googleImageView"
                    android:layout_width="30dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/google_png"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/googleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/google"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="InefficientWeight,NestedWeights" />
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_background"
            android:text="@string/login_button"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signupTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textColor="@color/blue1"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>